[tool.poetry]
name = "leetcode-solution"
version = "0.1.0"
description = "this package for hands on solution in Leetcode platform"
authors = ["potter"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
